@startuml
!pragma layout smetana
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
hide circle
hide methods
title Domain Model - US2.2.5 Register Shipping Agent Organization

' ==== CORE ENTITIES ====

class ShippingAgentOrganization {
    identifier
    legalName
    alternativeName
    address
    taxNumber
}

class ShippingAgentRepresentative {
    name
    citizenID
    nationality
    email
    phone
}

' ==== USERS & ROLES ====

class PortAuthorityOfficer {
    employeeID
    name
}

class UserAccount {
    ID
    username
    passwordHash
}

class Role {
    name   'Port Authority Officer, Shipping Agent Rep
}

' ==== RELATIONSHIPS ====

PortAuthorityOfficer "1" -- "*" ShippingAgentOrganization : registers >
ShippingAgentOrganization "1" -- "1..*" ShippingAgentRepresentative : has >
ShippingAgentRepresentative "1" -- "1" UserAccount : linked >
UserAccount "1" -- "1" Role : assigned >

@enduml
